fix bug on css overflow

--- a/footer.css
+++ b/footer.css
@@ -26,5 +26,7 @@ pre {
   background-color: #ededed;
   color: #424242;
   font-size: 0.8rem;
-  text-align: left;
+  text-align: right;
+  width: 100%;
+  overflow: hidden;
 }
